Changed some IDs, added settings div, dark mode toggle, correct "onload" variant, auto-update details, some CSS polish.

--- a/ttStyle.css
+++ b/ttStyle.css
@@ -1,15 +1,3 @@
-/*For dark mode*/
-/*body {*/
-/*    background-color: #111;*/
-/*    color: lightgray;*/
-/*}*/
-/*button, input {*/
-/*    background-color: #333;*/
-/*    color: white;*/
-/*}*/
-/*a {*/
-/*    color: lightblue;*/
-/*}*/
 
 div {
     box-sizing: border-box;
@@ -29,10 +17,14 @@ div {
     grid-template-rows: 50px auto 10%;
     /*height: 100vh; !* Fallback for browsers that do not support Custom Properties *!*/
     height: calc(var(--vh, 1vh) * 98);
+    max-width: 1500px;
     user-select: none;
 }
+button {
+    background-color: lightgray;
+}
 
-#timeStuff {
+#time {
     grid-column: 1/span 2;
     grid-row: 1;
 }
@@ -125,11 +117,11 @@ div {
     grid-template-columns: auto;
 }
 
-#statSelect, #infoSelect {
+#citySelect, #statSelect {
     place-self: center;
 }
 
-#moreContainer {
+#infoBox {
     border: 1px solid black;
     grid-column: 4;
     grid-row: 2;
